--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,130 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;1,300;1,900&display=swap');
+
 body {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Lato', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.page{
+  margin: 0 10px;
 }
+
+.topbar{
+   background-color: #FF5A5F;
+   margin:0;
+}
+.topbar h1{
+  color: #FFF;
+  margin: 0px;
+  text-align: center;
+  font-size: 1.7em;
+  font-weight: 300;
+}
+.title {
+  font-weight: 900;
+  color: #484848;
+  font-size: 1.4em;
+}
+.ranking{
+  display: flex;
+  overflow-x: auto;
+}
+.ranking article{
+ 
+  height: 230px;
+  margin: 0 5PX;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding: 10px;
+  background-size: cover;
+  opacity: 0.8;
+  
+}
+.ranking article:hover{
+  opacity: 1;
+}
+.ranking article h2, .ranking article h6{
+  padding: 0;
+  margin: 0;
+  color: #FFF;
+  text-decoration:none;
+  
+}
+.ranking article h2{
+  font-weight: 300;
+  font-size: 1.3em;
+  width: 170px;
+}
+
+.listExperence section{
+  display: flex;
+  box-shadow: 5px 1px 6px #ebe7e7;
+  border: #cccccc;
+  border-radius: 9px;
+  padding: 0;
+  margin: 5px;
+}
+.listExperence div{
+  padding: 0;
+  margin: 1px 10px;
+}
+.listExperence article{ 
+  width: 20%;
+  height: 50px;
+  padding: 10px;
+  background-size: cover;
+  border-top-left-radius: 9px;
+  border-bottom-left-radius:9px;
+  opacity: 0.8;
+  
+}
+.listExperence article:hover{
+  opacity: 1;
+  cursor: pointer;
+}
+.listExperence section h2, .listExperence section h6,.listExperence section h4{
+  padding: 0;
+  margin: 0;
+  color: #484848;
+  font-weight: 400;
+  font-size: 0.9em;
+  text-decoration:none;
+}
+.card-detail{
+  border: 1px solid #cccccc;
+  box-shadow: 1px 2px 2px #cccccc;
+  overflow: hidden;
+  border-radius: 10px;
+}
+.card-detail img{
+ width: 100%;
+ border-top-right-radius: 10px;
+ border-top-left-radius: 10px;
+}
+
+.card-detail p{
+  padding: 0 15px;
+  font-size: 1.20em;
+  font-weight: 300;
+  color: #767676;
+ }
+ .button{
+   width: 100%;
+   margin: 15px 0;
+   padding: 5px 0;
+   border-color: #cccccc;
+   border-width: 1px;
+   border-radius: 5px;
+   background-color: #00A699;
+   color: #ffffff;
+   font-size:1.1em;
+   opacity: 0.8;
+  }
+ 
+  .button:hover{
+    opacity: 1;
+    cursor: pointer;
+  }
