--- a/src/index.css
+++ b/src/index.css
@@ -97,6 +97,11 @@ body {
     cursor: pointer;
   }
 
+  .button:disabled{
+    background-color: #ccc;
+    cursor: no-drop;
+  }
+
   .housing{
     display: flex;
     border: 1px solid #f2f2f2;
@@ -144,4 +149,30 @@ body {
  }
  .score div i {
   color:#00A699;
+}
+.booking-form{
+  margin: 15px 0;
+}
+.booking-form div{
+  border:1px solid #ccc;
+  background: #f2f2f2;
+  margin: 10px 0;
+  border-radius: 3px;
+  padding: 0 10px;
+}
+.booking-form input{
+  width: 100%;
+  padding: 0px;
+  font-weight: 300;
+  outline: none;
+  font-size: 1.1em;
+  background: transparent;
+  border: none;
+  margin:3px 0;
+  text-transform: uppercase;
+  font-family: 'Lato';
+}
+.booking-form label{
+  color: #777;
+  font-size: 0.95;
 }
